# koji

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
assets/data/: simple_skin.gltf  simple_triangle.gltf
assets/shaders/: camera.slang  deferred.vert  lighting.frag  pbr.frag  pbr.vert  pbr_spheres.frag  pbr_spheres.vert  sample.frag  sample.vert  shadows.vert  shadows_lit.frag  test_triangle.vert  text.frag  text.vert  timing.slang
docs/: rendering_workflow.md
examples/: README.md  graph_basic.json  graph_basic.yaml
examples/bindless_lighting/: bin.rs
examples/bindless_rendering/: bin.rs
examples/compute_example/: bin.rs
examples/custom_pass/: bin.rs
examples/pbr_renderer/: bin.rs
examples/pbr_spheres/: README.md  bin.rs
examples/sample/: bin.rs
examples/sample_deferred/: bin.rs
examples/sample_shadows/: bin.rs
examples/skeletal_animation/: bin.rs
examples/skeletal_renderer/: bin.rs
examples/skinned_mesh_render/: bin.rs
examples/static_movement/: bin.rs
examples/text2d/: bin.rs
examples/text3d/: bin.rs
shaders/: gbuffer.frag  lighting.frag  sprite.frag  sprite.vert  text.frag
src/: canvas.rs  lib.rs  render_pass.rs  texture_manager.rs
src/animation/: clip.rs  mod.rs
src/bindless/: mod.rs
src/canvas/: io.rs
src/compute/: mod.rs
src/gltf/: mod.rs
src/material/: bindless.rs  bindless.slang  bindless_lighting.rs  compute_pipeline_builder.rs  header_parser.rs  header_parser_tests.rs  matbinding.rs  material_yaml_tests.rs  mod.rs  pbr.frag  pipeline_builder.rs  pipeline_builder_tests.rs  shader_reflection.rs  shader_reflection_tests.rs  skin_pipeline.rs  skinning.rs
src/material/pipeline_builder/: pipeline_builder_tests.rs
src/modules/: mod.rs  time.rs  timedate.rs
src/modules/reflection/: mod.rs
src/render_graph/: builder.rs  composition.rs  io.rs  mod.rs
src/renderer/: drawable.rs  mod.rs  skinning.vert  time_stats.rs
src/sprite/: mod.rs  renderer.rs
src/text/: dynamic_text.rs  font_registry.rs  mod.rs  static_text.rs
src/utils/: allocator.rs  dhobject.rs  frame_diff.rs  mod.rs  resource_list.rs
test/sample/: bin.rs
test/sample_deferred/: bin.rs
test/sample_shadows/: bin.rs
tests/: bindless_lighting.rs  bindless_render.rs  bindless_rendering.rs  canvas_io.rs  compute_pipeline.rs  custom_pass.rs  depth_stencil_transition.rs  examples.rs  gltf_loader.rs  headless_frame_diff.rs  pbr_renderer.rs  pbr_spheres.rs  pbr_texture_loading.rs  pipeline_group.rs  render_graph.rs  render_graph_execution.rs  sample-triangle.rs  skeletal_animation.rs  skeletal_renderer.rs  skinned_mesh_render.rs  skinned_mesh_rendering.rs  skinning.rs  sprite_renderer.rs  static_mesh_movement.rs  static_movement.rs  text2d.rs  text_mesh.rs  text_renderer.rs  texture_manager.rs  time_stats.rs
tests/data/: test_camera.frag  test_timing.frag  transform_node.gltf
tests/pbr_spheres/: bin.rs
tests/sample/: bin.rs
tests/sample_deferred/: bin.rs
tests/sample_shadows/: bin.rs
