[package]
name = "koji"
version = "0.1.0"
edition = "2021"

[dependencies]
glam = { version = "0.29.0", features = ["bytemuck"] }
rhai = {git = "https://github.com/rhaiscript/rhai" }
dashi = {git = "https://github.com/JordanHendl/dashi", features = ["dashi-serde"]}
#dashi = {path = "C:/Program Files/Git/wksp/git/dashi", features = ["dashi-serde"]}
#dashi = {path = "/wksp/git/dashi", features = ["dashi-serde"]}
inline-spirv = {version = "0.2.1"}
spirv-reflect = { git = "https://github.com/gfxstrand/spirv-reflect-rs.git" }
sdl2 = {version = "0.37.0", features = ["bundled", "static-link", "raw-window-handle"]}
serde = { version = "1.0", features = ["derive"] }
indexmap = "2"
serde_yaml = "0.9"
bytemuck = { version = "1.22.0", features = ["derive"] }
gltf = "1.4"
rusttype = "0.9"

[dev-dependencies]
serial_test = "2.0"

[build-dependencies]
walkdir = "2.4.0"

#[package.metadata.slang]
#src_dir = "src/slang/src"
#out_dir = "target/spirv"

[lib]

[[bin]]
name = "sample"
path = "tests/sample/bin_impl.rs"

[[bin]]
name = "deferred_sample"
path = "tests/sample_deferred/bin_impl.rs"

[[bin]]
name = "shadow_sample"
path = "tests/sample_shadows/bin_impl.rs"


