[package]
name = "koji"
version = "0.1.0"
edition = "2021"

[dependencies]
glam = { version = "0.29.0", features = ["bytemuck"] }
rhai = {git = "https://github.com/rhaiscript/rhai" }
dashi = {git = "https://github.com/JordanHendl/dashi", rev = "904c7c48599a14c3cfc613a91b94d324aa05f6c8", features = ["dashi-serde"]}
#dashi = {path = "C:/Program Files/Git/wksp/git/dashi", features = ["dashi-serde"]}
#dashi = {path = "/wksp/git/dashi", features = ["dashi-serde"]}
inline-spirv = {version = "0.2.1"}
spirv-reflect = { git = "https://github.com/gfxstrand/spirv-reflect-rs.git" }
serde = { version = "1.0", features = ["derive"] }
indexmap = "2"
serde_yaml = "0.9"
bytemuck = { version = "1.22.0", features = ["derive"] }
gltf = "1.4"
rusttype = "0.9"
winit = "0.26"

[dev-dependencies]
serial_test = "2.0"

[features]
gpu_tests = []
large-tests = []

[build-dependencies]
walkdir = "2.4.0"

#[package.metadata.slang]
#src_dir = "src/slang/src"
#out_dir = "target/spirv"

[lib]

[[example]]
name = "sample"
path = "examples/sample/bin.rs"

[[example]]
name = "deferred_sample"
path = "examples/sample_deferred/bin.rs"

[[example]]
name = "shadow_sample"
path = "examples/sample_shadows/bin.rs"

[[example]]
name = "pbr_spheres"
path = "examples/pbr_spheres/bin.rs"

[[example]]
name = "custom_pass"
path = "examples/custom_pass/bin.rs"

[[example]]
name = "bindless_lighting"
path = "examples/bindless_lighting/bin.rs"

[[example]]
name = "bindless_rendering"
path = "examples/bindless_rendering/bin.rs"

[[example]]
name = "pbr_renderer"
path = "examples/pbr_renderer/bin.rs"

[[example]]
name = "skinned_mesh_render"
path = "examples/skinned_mesh_render/bin.rs"

[[example]]
name = "skeletal_renderer"
path = "examples/skeletal_renderer/bin.rs"

[[example]]
name = "skeletal_animation"
path = "examples/skeletal_animation/bin.rs"

[[example]]
name = "static_movement"
path = "examples/static_movement/bin.rs"

[[example]]
name = "text2d"
path = "examples/text2d/bin.rs"

