[package]
name = "koji"
version = "0.1.0"
edition = "2021"

[dependencies]
glam = { version = "0.29.0", features = ["bytemuck"] }
rhai = {git = "https://github.com/rhaiscript/rhai" }
dashi = {git = "https://github.com/JordanHendl/dashi", features = ["dashi-serde"]}
#dashi = {path = "C:/Program Files/Git/wksp/git/dashi", features = ["dashi-serde"]}
#dashi = {path = "/wksp/git/dashi", features = ["dashi-serde"]}
inline-spirv = {version = "0.2.1"}
spirv-reflect = { git = "https://github.com/gfxstrand/spirv-reflect-rs.git" }
serde = { version = "1.0", features = ["derive"] }
indexmap = "2"
serde_yaml = "0.9"
bytemuck = { version = "1.22.0", features = ["derive"] }
gltf = "1.4"
rusttype = "0.9"
winit = "0.26"
image = "0.24"

[dev-dependencies]
serial_test = "2.0"

[features]
gpu_tests = []
large-tests = []

[build-dependencies]
walkdir = "2.4.0"


#[package.metadata.slang]
#src_dir = "src/slang/src"
#out_dir = "target/spirv"

[lib]

[[example]]
name = "sample"
path = "examples/sample/bin.rs"

[[example]]
name = "pbr_spheres"
path = "examples/pbr_spheres/bin.rs"

[[example]]
name = "bindless_rendering"
path = "examples/bindless_rendering/bin.rs"

[[example]]
name = "skeletal_animation"
path = "examples/skeletal_animation/bin.rs"

[[example]]
name = "text2d"
path = "examples/text2d/bin.rs"

[[example]]
name = "text3d"
path = "examples/text3d/bin.rs"

